5.2.0

- Massive (unfortunately, sometimes not backward-compatible) overhauling
  of the interface specification and of the implementation to reduce the
  amount of parameter checks and special cases.

5.1.5

- Fast forward iterations in
  EliasFanoMonotoneLongBigList/EliasFanoPrefixSumBigList and skipping by
  value when iterating over an EliasFanoIndexedMonotoneLongBigList.

5.1.4

- Several new methods for EliasFanoIndexedMonotoneLongBigList.

5.1.3

- Released to fix dependency on broken dsiutils 2.1.13.

5.1.2

- New indexed version of EliasFanoMonotoneLongBigList.

- OSGi metadata and default modularization.

- Manual reduction in strength in arithmetic operations everywhere.

5.1.1

- Added automatic module name.

5.1.0

- GOV/GV functions now allow arbitrary data sizes, thanks to the
  new LongBigArrayBitVector class in the DSI utilities.

- Fixed SLF4J dependencies (again).

5.0.4

- We now use the classifier in naming artifacts.

5.0.3

- Fixed build.xml: moved to Java 9, more explicit dependency naming.

5.0.2

- Fixed old bug in SimpleSelect. Thanks to Richard Webb for reporting
  this bug.

5.0.1

- New EliasFanoMonotoneLongBigList16 class supporting very large
  lists with fixed lower-bits width 16 (bypassing the LongArrayBitVector
  128Gib limit).

5.0.0

- Major revamp of the it.unimi.dsi.sux4j.mph package.

4.3.0

- Several fixes and improvements.

4.2.0

- Java 8-only.

- New compressed functions (GV3CompressedFunction and
  GV4CompressedFunction) which store a mapping key/value using a number of
  bits per key close to the empirical entropy of the list of values.

- Parallel, multithreaded construction for GOV3Function, GOV4Function,
  GOVMinimalPerfectHashFunction, GV3CompressedFunction and GV4CompressedFunction).

4.1.0

- We now use in all the new structures of the mph package a modulo-free
  range reduction based on a integer-simulated floating point computation